--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
   </head>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+
+    #app {
+      width: 100vw;
+      height: 100vh;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .waiting_bg {
+      width: 100%;
+    }
+
+    .waiting_logo_wrapper {
+      width: 180px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .waiting_logo {
+      width: 100%;
+      transform: scale(0.91);
+      transform-origin: center center;
+      animation: 3s linear 0s infinite normal forwards running breath;
+    }
+
+    @keyframes breath {
+      0% {
+        animation-timing-function: cubic-bezier(
+          0.9647,
+          0.2413,
+          -0.0705,
+          0.7911
+        );
+        transform: scale(0.9);
+      }
+
+      51% {
+        animation-timing-function: cubic-bezier(
+          0.9226,
+          0.2631,
+          -0.0308,
+          0.7628
+        );
+        transform: scale(1.02994);
+      }
+
+      100% {
+        transform: scale(0.9);
+      }
+    }
+  </style>
+
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <img
+        class="waiting_bg"
+        src="/waiting_bg.svg"
+        alt="waiting_bg"
+        importance="high"
+      />
+      <div class="waiting_logo_wrapper">
+        <img
+          class="waiting_logo"
+          src="/waiting_logo.svg"
+          alt="waiting_logo"
+          importance="high"
+        />
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
