--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
     }
 
     #app {
-      width: 100vw;
       height: 100vh;
       position: relative;
       overflow: hidden;
@@ -68,14 +67,14 @@
     <div id="app">
       <img
         class="waiting_bg"
-        src="/waiting_bg.svg"
+        src="../src/assets/images/waiting_bg.svg"
         alt="waiting_bg"
         importance="high"
       />
       <div class="waiting_logo_wrapper">
         <img
           class="waiting_logo"
-          src="/waiting_logo.svg"
+          src="../src/assets/images/logo.svg"
           alt="waiting_logo"
           importance="high"
         />
