--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,11 @@
     }
 
     #app {
-      height: 100vh;
       position: relative;
+    }
+
+    .waiting_bg_wrapper {
+      height: 100vh;
       overflow: hidden;
     }
 
@@ -65,12 +68,14 @@
 
   <body>
     <div id="app">
-      <img
-        class="waiting_bg"
-        src="../src/assets/images/waiting_bg.svg"
-        alt="waiting_bg"
-        importance="high"
-      />
+      <div class="waiting_bg_wrapper">
+        <img
+          class="waiting_bg"
+          src="../src/assets/images/waiting_bg.svg"
+          alt="waiting_bg"
+          importance="high"
+        />
+      </div>
       <div class="waiting_logo_wrapper">
         <img
           class="waiting_logo"
