添加系统配置

--- a/public/index.html
+++ b/public/index.html
@@ -77,12 +77,12 @@
   <body>
     <div id="waiting">
       <div class="waiting_bg_wrapper">
-        <img
+        <!-- <img
           class="waiting_bg"
           src="../src/assets/images/waiting_bg.svg"
           alt="waiting_bg"
           importance="high"
-        />
+        /> -->
       </div>
       <div class="waiting_logo_wrapper">
         <img
